--- a/templates/home.html
+++ b/templates/home.html
@@ -353,6 +353,8 @@
                 <option value="I-130">I-130 Petition for Alien Relative</option>
                 <option value="I-90">I-90 Application to Replace Permanent Resident Card</option>
                 <option value="N-400">N-400 Application for Naturalization</option>
+                <option value="I-751">I-751 Petition to Remove Conditions on Residence</option>
+                <option value="I-824">I-824 Application for Action on an Approved Application or Petition</option>
                 <option value="Other">Other Petition Types</option>
             </select> 
             <br>
