--- a/static/css/home.css
+++ b/static/css/home.css
@@ -2,6 +2,14 @@ body {
 	background-color:#F7CAC9;
 }
 
+ul {
+	
+  }
+
+li {
+   display: inline;
+}
+
 h1 {
 	font-family: 'Open Sans Condensed', arial, sans;
 	text-align: center;
