--- a/templates/caseData.html
+++ b/templates/caseData.html
@@ -19,6 +19,7 @@
 <script src="https://cdn.bokeh.org/bokeh/release/bokeh-mathjax-3.0.0.min.js"
     crossorigin="anonymous"></script>
     {{script | safe}}
+
 </head>
 <body>
     
@@ -27,7 +28,7 @@
 <h2>Numbers of Petition Types In Range of 5000</h2>
 <div id="distbar" class="dist">
     <div id="distGraph" class="distChild">
-    {{divBar | safe}}
+    {{divDist | safe}}
     </div>
     <div id="distTable" class="distChild">
         <div id="distTableBody" class="distChild2"> 
@@ -42,10 +43,39 @@
             a certain case number. </p>
         </div>
     </div>
-   
 </div>
 
-   
+
+
+<div class="wrapper">
+    <div class="tabs">
+        {%for caseType in statusGraphDict.keys()%}
+        <div class="tab">
+            <input type="radio" name="css-tabs" id="{{caseType}}" checked class="tab-switch">
+            <label for="{{caseType}}" class="tab-label">{{caseType}}</label>
+            <div class="tab-content">{{statusGraphDict[caseType] | safe}}</div>
+          </div>
+        {%endfor%}
+      <!-- <div class="tab">
+        <input type="radio" name="css-tabs" id="tab-1" checked class="tab-switch">
+        <label for="tab-1" class="tab-label">Tab One</label>
+        <div class="tab-content">My father had a small estate in Nottinghamshire: I was the third of five sons. He sent me to Emanuel College in Cambridge at fourteen years old, where I resided three years, and applied myself close to my studies; but the charge of maintaining me, although I had a very scanty allowance, being too great for a narrow fortune, I was bound apprentice to Mr. James Bates, an eminent surgeon in London, with whom I continued four years. </div>
+      </div>
+      <div class="tab">
+        <input type="radio" name="css-tabs" id="tab-2" class="tab-switch">
+        <label for="tab-2" class="tab-label">Tab Two</label>
+        <div class="tab-content">My father now and then sending me small sums of money, I laid them out in learning navigation, and other parts of the mathematics, useful to those who intend to travel, as I always believed it would be, some time or other, my fortune to do. </div>
+      </div>
+      <div class="tab">
+        <input type="radio" name="css-tabs" id="tab-3" class="tab-switch">
+        <label for="tab-3" class="tab-label">Tab Three</label>
+        <div class="tab-content">When I left Mr. Bates, I went down to my father: where, by the assistance of him and my uncle John, and some other relations, I got forty pounds, and a promise of thirty pounds a year to maintain me at Leyden: there I studied physic two years and seven months, knowing it would be useful in long voyages.</div>
+      </div> -->
+    </div>
+    <p>Example line outside of tab box</p>
+  </div>
+  
+  
 
     
 </body>
