--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,14 +1,10 @@
+@import "navbar.css";
+
 body {
 	background-color:#F7CAC9;
 }
 
-ul {
-	
-  }
 
-li {
-   display: inline;
-}
 
 h1 {
 	font-family: 'Open Sans Condensed', arial, sans;
@@ -24,7 +20,7 @@ h1 {
 	width: 500px;
 	padding: 30px;
 	background: #FFFFFF;
-	margin: 50px auto;
+	margin: 100px auto;
 	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
 	-moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
 	-webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
@@ -39,6 +35,7 @@ h1 {
 	font-weight: 100;
 	padding: 20px;
 	margin: -30px -30px 30px -30px;
+
 }
 .form-style-8 input[type="text"],
 .form-style-8 input[type="date"],
