--- a/templates/invalid.html
+++ b/templates/invalid.html
@@ -7,19 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <nav id="navbar" class="">
-        <div class="nav-wrapper">
-          <div class="logo">
-            <a href="#home"><i class="fa fa-angellist"></i>IMMIGENCE: Your USCIS insights</a>
-          </div>
-          <ul id="menu">
-            <li><a href="{{url_for('views.home')}}">Home</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="{{url_for('views.invalid')}}"">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-      </nav>
+  <nav id="navbar" class="">
+    <div class="nav-wrapper">
+      <div class="logo">
+        <a href="{{url_for('views.home')}}"><i class="fa fa-angellist"></i>IMMIGENCE: Your USCIS insights</a>
+      </div>
+      <ul id="menu">
+        <li><a href="{{url_for('views.home')}}">Home</a></li>
+        <li><a href="{{url_for('views.displayRanges')}}">Ranges</a></li>
+        <li><a href="{{url_for('views.about')}}">About</a></li>
+        <li><a href="{{url_for('views.contact')}}">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
     <h2>The number you typed in is invalid, please try again</h1>
 
 </body>
