--- a/templates/checkBacklater.html
+++ b/templates/checkBacklater.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
-    <title>Document</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/checkBacklater.css') }}">
+    <title>Check Back Later!</title>
 </head>
 <body>
   <nav id="navbar" class="">
@@ -22,7 +22,7 @@
     </div>
   </nav>
       
-    <h1>We have included your case range (of 5000 cases) in data collection, check back 24 hours later!</h1>
+    <h1>We have included your case range (of 5000 cases) in data collection, check back in a few hours!</h1>
     
     
 </body>
