--- a/templates/range.html
+++ b/templates/range.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/range.css') }}">
-    <title>Document</title>
+    <title>Immigence - Ranges</title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   
     
