--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,18 +1,25 @@
 #navbar {
+
 	background: white;
 	color: rgb(13, 26, 38);
 	position: fixed;
 	top: 0;
-	height: 60px;
+	/* height: 60px; */
+	height:auto;
 	line-height: 60px;
 	width: 100vw;
 	z-index: 10;
   }
   
   .nav-wrapper {
+	background: white;
 	margin: auto;
 	text-align: center;
+	height:auto;
 	width: 70%;
+	display: flex;
+	flex-direction: row;
+	
   } @media(max-width: 768px) {
 	  .nav-wrapper {
 		width: 90%;
@@ -32,6 +39,7 @@
 	  
   
   .logo {
+	flex-shrink: 3;
 	float: left;
 	margin-left: 28px;
 	font-size: 1.5em;
@@ -45,6 +53,7 @@
 	}
   
   #navbar ul {
+	flex-shrink: 3;
 	display: inline-block;
 	float: right;
 	list-style: none;
