--- a/static/css/home.css
+++ b/static/css/home.css
@@ -2,6 +2,8 @@
 
 body {
 	background-color:#F7CAC9;
+	height: auto;
+	width: 100vw;
 }
 
 
@@ -109,6 +111,7 @@ h3{
 	width: 100%;
 	height:auto;
 	margin: 0 auto;
+	padding-bottom: 50vh;
 	}
 	.tabs {
 	position: relative;
@@ -161,7 +164,6 @@ h3{
 	border-bottom: 0.25rem solid #bdc3c7;
 	opacity: 0;
 	transition: all 0.35s;
-	overflow: scroll;
 	}
 	.tab-switch:checked + .tab-label {
 	background: #fff;
