--- a/static/css/range.css
+++ b/static/css/range.css
@@ -2,6 +2,8 @@
 
 body {
 	background-color:#F7CAC9;
+	height: auto;
+	width: 100vw;
 }
 
 
@@ -16,23 +18,9 @@ h1 {
 	-webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
 }
 
-.range-title {
-	font-family: monospace;
-	text-align: center;
-}
-
-.ranges {
-	padding-top: 5%;
-}
 .rangeList {
 	text-align: center;
 	text-decoration: none;
-}
-
-.rangeContainer {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
 }
 
 .range {
@@ -42,11 +30,4 @@ h1 {
 .range:hover{
 	box-shadow: darkgoldenrod;
 	text-decoration: underline;
-}
-
-
-
-.progress-bars {
-	width: 20%;
-	margin: auto;
 }
