--- a/templates/range.html
+++ b/templates/range.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/range.css') }}">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/range.css') }}">
     <title>Immigence - Ranges</title>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   
@@ -28,7 +28,7 @@
 
     <div id="ranges" class="ranges">
         <div class="range-title">
-          <h2>Case ranges and today's scanner progress:</h2>
+          <h2>Today's scanner progress (% of cases scanned within 24 hours):</h2>
           <h3>LastUpdated: {{nowTime}}</h3>
         
         </div>
