--- a/templates/home.html
+++ b/templates/home.html
@@ -369,7 +369,7 @@
 
         <div class="TodayApprovedCases">
             <h2>Today's Approvals</h2>
-            <h3>{{today}} EST</h3>
+            <h3>{{today}}</h3>
             <div class="wrapper">
                 
                 <div class="tabs">
