--- a/static/css/home.css
+++ b/static/css/home.css
@@ -12,7 +12,9 @@ body {
 	padding-top: 10vh;
 }
 
-
+.marquee {
+	padding-top:10vh;
+}
 h1 {
 	font-family: 'Open Sans Condensed', arial, sans;
 	text-align: center;
@@ -32,12 +34,13 @@ h3{
 	font-family: 'Open Sans Condensed', arial, sans;
 	text-align: center;
 }
+
 .form-style-8{
 	font-family: 'Open Sans Condensed', arial, sans;
 	width: 500px;
 	padding: 30px;
 	background: #FFFFFF;
-	margin: 100px auto;
+	margin: 20px auto;
 	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
 	-moz-box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.22);
 	-webkit-box-shadow:  0px 0px 15px rgba(0, 0, 0, 0.22);
