--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
   <nav id="navbar" class="">
     <div class="nav-wrapper">
       <div class="logo">
-        <a href="{{url_for('views.home')}}"><i class="fa fa-angellist"></i>IMMIGENCE: Your USCIS insights</a>
+        <a href="{{url_for('views.home')}}"><i class="fa fa-angellist"></i>IMMIGENCE<a href="{{url_for('views.home')}}" class='second-logo'>: Your USCIS insights</a></a>
       </div>
       <ul id="menu">
         <li><a href="{{url_for('views.home')}}">Home</a></li>
